fix gap in photo/text block

--- a/resources/styles/common/flexible-content.scss
+++ b/resources/styles/common/flexible-content.scss
@@ -56,6 +56,7 @@
         flex-direction: row;
         align-items: center;
         margin: 0;
+        column-gap: 4rem;
 
         img {
             max-width: 50%;
